# PitchIQ

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PROGRESS.md  README.md  constraints.txt  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: default.yaml  football.yaml
data/: CLAUDE.md
data/demo/synthetic-derby/: events.parquet  events_gt.parquet  homography.parquet  meta.json  status.json  tracking.parquet
data/demo/synthetic-derby-cv/: events.parquet  homography.parquet  meta.json  status.json  tracking.parquet
data/demo/synthetic-derby-cv/analytics/: formation_windows.parquet  heatmaps.npz  kinematics.parquet  line_breaking.parquet  phases.parquet  pitch_control.npz  pitch_control_frames.parquet  possession.parquet  pressures.parquet  shape.parquet  summary.json  xt_grid.npz  xt_players.parquet
data/demo/synthetic-derby-cv/intelligence/: embeddings.npz  marking.json  marking_timeline.parquet  roles.json  similarity.json  summary.json
data/demo/synthetic-derby-cv/report/: facts.json  report.md  report_meta.json
data/demo/synthetic-derby/analytics/: formation_windows.parquet  heatmaps.npz  kinematics.parquet  line_breaking.parquet  phases.parquet  (+8 more)
docker/: start.sh
docs/: HANDOFF.md  architecture.md  calibration.md  data_sources.md  deployment.md  limitations.md  model_card_football_yolo11n.md  roadmap.md  training.md  validation.md
pitchiq/: __init__.py  config.py
pitchiq/analytics/: __init__.py  common.py  events.py  formations.py  heatmaps.py  kinematics.py  passes.py  phases.py  pitch_control.py  possession.py  pressing.py  shape.py  xt.py
pitchiq/app/: __init__.py  api.py  ui.py
pitchiq/core/: __init__.py  artifacts.py  env.py  formations.py  geometry.py  pitch.py  schema.py  types.py  video.py
pitchiq/demo/: __init__.py  profiles.py  render.py  simulate.py
pitchiq/intelligence/: __init__.py  embeddings.py  encoder.py  features.py  marking.py  roles.py  similarity.py
pitchiq/io/: __init__.py  errors.py  metrica.py  roboflow.py  soccernet.py  statsbomb.py
pitchiq/perception/: __init__.py  pose.py
pitchiq/perception/calibration/: __init__.py  calibrator.py  conics.py  estimate.py  keypoints.py  lines.py  manual.py  refine.py  temporal.py
pitchiq/perception/detection/: __init__.py  ball.py  ball_dataset.py  base.py  blob.py  tracknet.py  ultralytics_backend.py
pitchiq/perception/jersey/: __init__.py  ocr.py
pitchiq/perception/teams/: __init__.py  assign.py  embedder.py
pitchiq/perception/tracking/: __init__.py  appearance.py  bytetrack.py  camera_motion.py  kalman.py  metrics.py
pitchiq/pipeline/: __init__.py  analytics.py  full.py  intelligence.py  perception.py  report.py
pitchiq/report/: __init__.py  audit.py  facts.py  generator.py  llm.py  qa.py  quality.py
pitchiq/viz/: __init__.py  annotate.py  charts.py  pitch_plot.py  radar_html.py
scripts/: audit_report.py  build_demo.py  download_data.py  eval_ball_tracker.py  extract_soccernet_clip.py  kaggle_train_detector.py  process_clip.py  publish_detector.py  recalibrate.py  train_ball_tracker.py  train_detector.py  train_pitch_keypoints.py  train_style_encoder.py  validate_synthetic.py
tests/: conftest.py  test_analytics_core.py  test_analytics_spatial.py  test_analytics_tactical.py  test_ball_tracknet.py  test_calibration.py  test_conics.py  test_detection_weights.py  test_geometry.py  test_intelligence.py  test_pitch.py  test_pose.py  test_quality.py  test_report.py  test_schema.py  test_simulator.py  test_teams.py  test_tracking.py  test_viz.py
weights/: style_encoder.pt
(+10 files in other folders)
