[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pitchiq"
version = "0.1.0"
description = "PitchIQ - football tactical intelligence from broadcast video"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "pyarrow>=14",
    "scikit-learn>=1.3",
    "networkx>=3.1",
    "opencv-python-headless>=4.8",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "plotly>=5.18",
    "tqdm>=4.66",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.7",
    "streamlit>=1.31",
    "requests>=2.31",
    "imageio-ffmpeg>=0.4.9",
]
cv = [
    "torch>=2.2",
    "torchvision>=0.17",
    "ultralytics>=8.2",
    "easyocr>=1.7",
]
ml = [
    "faiss-cpu>=1.8",
    "umap-learn>=0.5.5",
]
llm = [
    "anthropic>=0.40",
]
data = [
    "SoccerNet>=0.1.55",
    "roboflow>=1.1",
    "statsbombpy>=1.11",
]
track = [
    "wandb>=0.16",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.2",
]
all = ["pitchiq[app,cv,ml,llm,data,track,dev]"]

[tool.setuptools.packages.find]
include = ["pitchiq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# E741: geometry/calibration code names lines `l` — intentional domain idiom
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
# app entry points must call st.set_page_config()/load_env() before imports
"pitchiq/app/api.py" = ["E402"]
"pitchiq/app/ui.py" = ["E402"]
