[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pitchiq"
version = "0.1.0"
description = "PitchIQ - football tactical intelligence from broadcast video"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
# Upper bounds cap each dep at its next major release so an upstream break
# can't silently take down the live Space; constraints.txt (pip -c) pins the
# exact known-good set for reproducible deploys.
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "pandas>=2.1,<4",
    "pyarrow>=14,<27",
    "scikit-learn>=1.3,<2",
    "networkx>=3.1,<4",
    "opencv-python-headless>=4.8,<6",
    "pyyaml>=6.0,<7",
    "pydantic>=2.5,<3",
    "plotly>=5.18,<7",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.109,<1",
    "uvicorn[standard]>=0.27,<1",
    "python-multipart>=0.0.7,<1",
    "streamlit>=1.31,<2",
    "requests>=2.31,<3",
    "imageio-ffmpeg>=0.4.9,<1",
]
cv = [
    "torch>=2.2,<3",
    "torchvision>=0.17,<1",
    "ultralytics>=8.2,<9",
    "easyocr>=1.7,<2",
]
ml = [
    "faiss-cpu>=1.8,<2",
    "umap-learn>=0.5.5,<1",
]
llm = [
    "anthropic>=0.40,<1",
]
data = [
    "SoccerNet>=0.1.55,<1",
    "roboflow>=1.1,<2",
    "statsbombpy>=1.11,<2",
]
track = [
    "wandb>=0.16,<1",
]
dev = [
    "pytest>=7.4,<10",
    "pytest-cov>=4.1,<8",
    "ruff>=0.2,<1",
]
all = ["pitchiq[app,cv,ml,llm,data,track,dev]"]

[tool.setuptools.packages.find]
include = ["pitchiq*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# E741: geometry/calibration code names lines `l` — intentional domain idiom
ignore = ["E741"]

[tool.ruff.lint.per-file-ignores]
# app entry points must call st.set_page_config()/load_env() before imports
"pitchiq/app/api.py" = ["E402"]
"pitchiq/app/ui.py" = ["E402"]
